[gd_scene load_steps=8 format=3 uid="uid://dsg83rfsde2wp"]

[ext_resource type="Script" path="res://scripts/Menu.gd" id="1_ggoxk"]
[ext_resource type="FontFile" uid="uid://bsg7t5g7b0kqv" path="res://Gosrokan.otf" id="2_hctws"]
[ext_resource type="StyleBox" uid="uid://tqtcfqm07ue8" path="res://EST-Boton.tres" id="3_3pjkf"]
[ext_resource type="StyleBox" uid="uid://pdto5gafe0tl" path="res://EST-BotonHover.tres" id="4_ewm5j"]
[ext_resource type="StyleBox" uid="uid://cgy7vdqjw3tj" path="res://EST-BotonPresionado.tres" id="5_iatde"]

[sub_resource type="InputEventAction" id="InputEventAction_eaolk"]
action = &"start_game"

[sub_resource type="Shortcut" id="Shortcut_b5x3w"]
events = [SubResource("InputEventAction_eaolk")]

[node name="mainMenu" type="Node2D"]
script = ExtResource("1_ggoxk")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 800.0
offset_bottom = 600.0
color = Color(0.239216, 0.239216, 0.239216, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_right = 800.0
offset_bottom = 600.0
theme_override_constants/margin_left = 90
theme_override_constants/margin_right = 90

[node name="Contenido Juego" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/Contenido Juego"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_hctws")
theme_override_font_sizes/font_size = 128
text = "Titulo Aqui"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Contenido Juego"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.57
theme_override_constants/separation = 20

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Contenido Juego/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 50
theme_override_constants/margin_right = 50

[node name="InicioJuego" type="Button" parent="MarginContainer/Contenido Juego/VBoxContainer/MarginContainer"]
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = ExtResource("2_hctws")
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = ExtResource("3_3pjkf")
theme_override_styles/hover = ExtResource("4_ewm5j")
theme_override_styles/pressed = ExtResource("5_iatde")
shortcut = SubResource("Shortcut_b5x3w")
text = "Nuevo Juego"

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/Contenido Juego/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 50
theme_override_constants/margin_right = 50

[node name="Salir" type="Button" parent="MarginContainer/Contenido Juego/VBoxContainer/MarginContainer2"]
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = ExtResource("2_hctws")
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = ExtResource("3_3pjkf")
theme_override_styles/hover = ExtResource("4_ewm5j")
theme_override_styles/pressed = ExtResource("5_iatde")
text = "Salir
"

[node name="Copyright" type="VBoxContainer" parent="MarginContainer/Contenido Juego"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="InfoCR" type="Label" parent="MarginContainer/Contenido Juego/Copyright"]
layout_mode = 2
text = "2023, Jose_Varela"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TiempoRecord" type="Label" parent="."]
offset_left = 8.0
offset_top = 35.0
offset_right = 173.0
offset_bottom = 80.0
theme_override_fonts/font = ExtResource("2_hctws")
theme_override_font_sizes/font_size = 42
text = "00:00.00
"

[node name="Etiqueta-Tiempo" type="Label" parent="."]
offset_left = 8.0
offset_top = 8.0
offset_right = 88.0
offset_bottom = 35.0
theme_override_fonts/font = ExtResource("2_hctws")
theme_override_font_sizes/font_size = 24
text = "Tiempo Record:"

[connection signal="button_up" from="MarginContainer/Contenido Juego/VBoxContainer/MarginContainer/InicioJuego" to="." method="_on_inicio_juego_button_up"]
[connection signal="pressed" from="MarginContainer/Contenido Juego/VBoxContainer/MarginContainer/InicioJuego" to="." method="_on_inicio_juego_pressed"]
[connection signal="button_up" from="MarginContainer/Contenido Juego/VBoxContainer/MarginContainer2/Salir" to="." method="_on_salir_button_up"]
[connection signal="ready" from="TiempoRecord" to="." method="_on_tiempo_record_ready"]
